--- a/index.html
+++ b/index.html
@@ -300,9 +300,11 @@
                 </div>
                 <div class="about-content">
                     <h2>About Me</h2>
-                    <p>With over a decade of experience in the fashion industry, I've dedicated my career to creating designs that empower and inspire. My work combines innovative silhouettes with sustainable materials, bringing a fresh perspective to contemporary fashion.</p>
-                    <p>After graduating from the prestigious London College of Fashion, I've collaborated with leading brands and established my own label, focusing on creating pieces that stand the test of time both in style and quality.</p>
-                    <p>My designs have been featured in Vogue, Elle, and Harper's Bazaar, and worn by influential figures in the fashion industry. I believe in creating fashion that not only looks beautiful but also contributes to a more sustainable future.</p>
+                    <p>With over a decade of experience in the fashion industry, I have carved out my career by blending the rich traditions of Indonesian textiles with modern, sustainable design practices. My work seeks to bridge the gap between contemporary fashion and Indonesia's diverse cultural heritage, creating pieces that celebrate both. Drawing inspiration from the timeless beauty of batik, ikat, and tenun, I strive to create designs that are not only stylish but also socially and environmentally responsible.</p>
+                    <p>I am a proud graduate of <strong>State University of Surabaya</strong>, where I refined my skills in fashion design and garment technology. After completing my studies, I launched my own label, <strong>"Karya Nusantara"</strong>, based in Surabaya, focusing on elevating traditional Indonesian fabrics and craftsmanship. My label has gained recognition locally, participating in fashion shows like <strong>Surabaya Fashion Parade</strong> and <strong>Indonesia Fashion Week</strong> in Jakarta, where I’ve showcased collections that blend modern silhouettes with Indonesia’s rich textile history.</p>
+                    <p>Throughout my career, I’ve had the privilege of collaborating with notable Indonesian brands like <strong>Batik Keris</strong> and <strong>Matahari Department Store</strong>, where I contributed to their sustainable fashion initiatives, integrating eco-friendly materials and ethical production practices. I’ve also had the opportunity to design for high-profile events, including dressing influencers and celebrities for <strong>Jakarta Fashion Week</strong> and local awards shows.</p>
+                    <p>My work has been featured in leading fashion publications such as <strong>Elle Indonesia</strong> and <strong>Harper's Bazaar Indonesia</strong>, where I’ve been recognized for my innovative approach to modernizing traditional textiles. Moving forward, I am committed to building a brand that not only highlights Indonesia's fashion legacy but also addresses global sustainability challenges in the fashion industry.</p>
+
                 </div>
             </div>
         </div>
@@ -395,15 +397,27 @@
         <div class="container">
             <h2>Client Testimonials</h2>
             <div class="testimonial-grid">
-                <div class="testimonial-card">
-                    <p>"Dearisa's attention to detail and understanding of sustainable fashion is unparalleled. Her designs are both beautiful and conscientious."</p>
-                    <p><strong>- Emma Thompson, Vogue Editor</strong></p>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Working with Dearisa was an incredible experience. She truly understands how to bring a vision to life while maintaining sustainability."</p>
-                    <p><strong>- Sarah Chen, Fashion Influencer</strong></p>
-                </div>
-            </div>
+    <div class="testimonial-card">
+        <p>"Dearisa's design philosophy, combining sustainable practices with creativity, has inspired many of her students and colleagues. Her ability to balance innovation and tradition is truly exceptional."</p>
+        <p><strong>- Dr. Rina Sari, Lecturer & Fashion Design Advisor</strong></p>
+    </div>
+    <div class="testimonial-card">
+        <p>"Working with Dearisa has been an absolute pleasure; her dedication to creating timeless and sustainable fashion pieces has been a great asset to our collaborative collections."</p>
+        <p><strong>- Andi Pratama, Partner, Batik Keris</strong></p>
+    </div>
+    <div class="testimonial-card">
+        <p>"Our partnership with Dearisa has been incredibly rewarding. Her designs bring a modern twist to traditional textiles, making them more relevant and appealing to the global market."</p>
+        <p><strong>- Diah Pertiwi, Partner, Matahari Department Store</strong></p>
+    </div>
+    <div class="testimonial-card">
+        <p>"As a fellow designer, I admire Dearisa's approach to fashion—her attention to detail and commitment to sustainable materials truly set her apart from others in the industry."</p>
+        <p><strong>- Ario Fajar, Fashion Designer</strong></p>
+    </div>
+    <div class="testimonial-card">
+        <p>"Dearisa created a bespoke gown for my wedding, and the result was absolutely stunning. She took the time to understand my vision and turned it into a beautiful, one-of-a-kind piece."</p>
+        <p><strong>- Jessica Wira, Custom Client</strong></p>
+    </div>
+</div>
         </div>
     </section>
 
