--- a/index.html
+++ b/index.html
@@ -300,10 +300,13 @@
                 </div>
                 <div class="about-content">
                     <h2>About Me</h2>
-                    <p>With over a decade of experience in the fashion industry, I have carved out my career by blending the rich traditions of Indonesian textiles with modern, sustainable design practices. My work seeks to bridge the gap between contemporary fashion and Indonesia's diverse cultural heritage, creating pieces that celebrate both. Drawing inspiration from the timeless beauty of batik, ikat, and tenun, I strive to create designs that are not only stylish but also socially and environmentally responsible.</p>
-                    <p>I am a proud graduate of <strong>State University of Surabaya</strong>, where I refined my skills in fashion design and garment technology. After completing my studies, I launched my own label, <strong>"Karya Nusantara"</strong>, based in Surabaya, focusing on elevating traditional Indonesian fabrics and craftsmanship. My label has gained recognition locally, participating in fashion shows like <strong>Surabaya Fashion Parade</strong> and <strong>Indonesia Fashion Week</strong> in Jakarta, where I’ve showcased collections that blend modern silhouettes with Indonesia’s rich textile history.</p>
-                    <p>Throughout my career, I’ve had the privilege of collaborating with notable Indonesian brands like <strong>Batik Keris</strong> and <strong>Matahari Department Store</strong>, where I contributed to their sustainable fashion initiatives, integrating eco-friendly materials and ethical production practices. I’ve also had the opportunity to design for high-profile events, including dressing influencers and celebrities for <strong>Jakarta Fashion Week</strong> and local awards shows.</p>
-                    <p>My work has been featured in leading fashion publications such as <strong>Elle Indonesia</strong> and <strong>Harper's Bazaar Indonesia</strong>, where I’ve been recognized for my innovative approach to modernizing traditional textiles. Moving forward, I am committed to building a brand that not only highlights Indonesia's fashion legacy but also addresses global sustainability challenges in the fashion industry.</p>
+                    <p>With over a decade of experience in the fashion industry, I specialize in blending traditional Indonesian textiles with modern, sustainable design. My work bridges the gap between contemporary fashion and Indonesia’s cultural heritage, using batik, ikat, and tenun to create stylish, eco-friendly pieces.</p>
+
+<p>A graduate of <strong>Institut Teknologi Sepuluh Nopember (ITS) Surabaya</strong>, I founded my label, <strong>"Karya Nusantara"</strong>, in Surabaya, focusing on elevating traditional craftsmanship. I’ve showcased my collections at <strong>Surabaya Fashion Parade</strong> and <strong>Indonesia Fashion Week</strong> in Jakarta, gaining recognition for modernizing Indonesian textiles.</p>
+
+<p>I’ve collaborated with notable brands like <strong>Batik Keris</strong> and <strong>Matahari Department Store</strong>, contributing to their sustainable initiatives. My designs have dressed influencers and celebrities at <strong>Jakarta Fashion Week</strong> and other high-profile events.</p>
+
+<p>Featured in <strong>Elle Indonesia</strong> and <strong>Harper's Bazaar Indonesia</strong>, I’m dedicated to building a brand that celebrates Indonesia's fashion legacy while addressing global sustainability challenges.</p>
 
                 </div>
             </div>
