--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="/api/placeholder/600/600" alt="Dearisa Firmanartha portrait" />
+                    <img src="images/about-image.png" alt="Dearisa Firmanartha portrait" />
                 </div>
                 <div class="about-content">
                     <h2>About Me</h2>
