--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <h2>About Me</h2>
                     <p>With over a decade of experience in the fashion industry, I specialize in blending traditional Indonesian textiles with modern, sustainable design. My work bridges the gap between contemporary fashion and Indonesia’s cultural heritage, using batik, ikat, and tenun to create stylish, eco-friendly pieces.</p>
 
-<p>A graduate in fashion design, I founded my label, <strong>"*****("</strong>, in Surabaya, focusing on elevating craftsmanship. I’ve showcased my collections at <strong>Surabaya Fashion Parade</strong> and <strong>Indonesia Fashion Week</strong> in Jakarta, gaining recognition for modernizing Indonesian textiles.</p>
+<p>A graduate in fashion design, I founded my label, <strong>"*****"</strong>, in Surabaya, focusing on elevating craftsmanship. I’ve showcased my collections at <strong>Surabaya Fashion Parade</strong> and <strong>Indonesia Fashion Week</strong> in Jakarta, gaining recognition for modernizing Indonesian textiles.</p>
 
 <p>I’ve collaborated with notable brands like <strong>Batik Keris</strong> and <strong>Matahari Department Store</strong>, contributing to their sustainable initiatives. My designs have dressed influencers and celebrities at <strong>Jakarta Fashion Week</strong> and other high-profile events.</p>
 
