--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="min-h-screen flex flex-col items-center justify-center px-4">
         <div class="text-center mb-16">
             <h1 class="text-5xl md:text-7xl font-light mb-4 text-gray-800">DEARISA</h1>
-            <p class="text-xl md:text-2xl text-gray-600 italic">Fashion Designer</p>
+            <p class="text-xl md:text-2xl text-gray-600 italic">Fashion Designer & Creative Director</p>
         </div>
 
         <div class="text-center mb-12">
